# nominally

./: .gitignore  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.md  MANIFEST.in  README.md  nox_utils.py  noxfile.py  noxfile_circleci.py  noxhelpers.py  paper.bib  paper.md  pylintrc  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  vercheck.py  version_check.py
.circleci/: config.yml  noxfile.py
.github/workflows/: matrix_test.yml  pypi.yml  test.yml
docs/: about.rst  basics.rst  conf.py  copyright.rst  faq.rst  index.rst  sausage.rst  use.rst
docs/source/: conf.py  index.rst
examples/: parse_csv.py
nominally/: __init__.py  __main__.py  api.py  config.py  parser.py  util.py  utilities.py
nominally/config/: __init__.py  capitalization.py  conjunctions.py  prefixes.py  regexes.py  suffixes.py  titles.py
nominally/examples/: process_csv.py
pytest/: capitalization.json  conftest.py  names_test.py  nickname.json  prefix.json  pytest_style_test.py  suffix.json  test_bank.json  test_cases.json  tests.py  title.json  unconverted_tests.py
requirements/: circleci.txt  common.txt  deploy.txt  dev.txt  docs.txt  lint.txt  test.txt  test_running.txt
stubs/unidecode/: __init__.pyi
test/: conftest.py  names_test.py  pylintrc  test_Name_core.py  test_Name_lists.py  test__issues.py  test_all_names.py  test_api.py  test_arrangements.py  test_clean_input.py  test_cleaning.py  test_functions.py  test_known_issues.py  test_name____ordering.py  test_name_blasting.py  test_name_core.py  test_names.py  test_ordering.py  test_parse_ordering.py  test_prefix_conjunction.py  test_suffix.py  test_suffix_and_ordering.py  test_suffix_and_title.py  test_title.py  test_unbreakable.py  test_utilities.py  util_test.py  version_consistency.py
test/names/: arrangements.json  bare_names.json  brute_force.json  capitalization.json  conjunction.json  first_name.json  nickname.json  ordering.json  prefix.json  suffix.json  test_bank.json  title.json  title_ordering.json  too_short.json
