[metadata]
name = nominally
version = 2.0
url = https://github.com/vaneseltine/nominally
author = Matt VanEseltine
author_email = matvan@umich.edu
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
license = AGPL-3.0-or-later
license_file = LICENSE
description = An opinionated name parser for record linkage.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = data parser

[options]
zip_safe = False
include_package_data = True

[coverage:run]
branch = True
source = nominally
# omit = */__*.py

[coverage:report]
# exclude_lines =
#     if __name__
#     raise NotImplementedError
#     def __eq__
#     def __hash__
#     def __len__
#     def __repr__
#     def __str__

[coverage:html]
directory = build/coverage

[doc8]
ignore-path=
    *.txt,
    docs/_static,
    .nox,
    .venv,
    build,
    nominally,
    nominally.egg-info
verbose = 0

[flake8]
max-line-length = 88
max-complexity = 10
exclude =
    .git,
    .nox,
    .venv,
    build,
    docs,
    test,
    __pycache__,
    __init__.py

[isort]


[tool:pytest]
log_cli = False
log_cli_level = DEBUG
testpaths = test
python_functions = t_* test_*
