[metadata]
name = nominally
version = attr: nominally.__version__
url = https://github.com/vaneseltine/nominally
author = Matt VanEseltine
author_email = matvan@umich.edu
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Database
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Sociology
    Topic :: Text Processing :: Linguistic
license = AGPL-3.0-or-later
license_file = LICENSE
description = A maximum-strength name parser for record linkage.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    data
    database
    English
    names
    parser
    text
project_urls =
    Examples = https://github.com/vaneseltine/nominally-examples/
    Documentation = https://github.com/vaneseltine/nominally/
    Source = https://github.com/vaneseltine/nominally/
    Issue Tracker = https://github.com/vaneseltine/nominally/issues
python_requires = >=3.6


[options]
zip_safe = True

[coverage:run]
branch = True
source = nominally
omit = */__*.py

[coverage:report]
exclude_lines =
    if T.TYPE_CHECKING


[coverage:html]
directory = build/coverage

[doc8]
ignore-path=
    *.txt,
    docs/_static,
    .nox,
    .venv,
    build,
    nominally,
    nominally.egg-info
verbose = 0

[flake8]
max-line-length = 88
max-complexity = 8
exclude =
    .git,
    .nox,
    .venv,
    build,
    docs,
    test,
    __pycache__,
    __init__.py
ignore =
    E203,
    E501,
    W503

[isort]
# black handles line length, don't you worry about it isort
line_length=120


[tool:pytest]
log_cli = False
log_cli_level = DEBUG
testpaths = test
python_files = test_*.py
python_functions = t_* test_* issue*
